--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -93,7 +93,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #21a133 !important;
+  background-color: #192ac9 !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -105,12 +105,12 @@ body {
   background-color: #879a9f !important;
 }
 .bg-danger {
-  background-color: #b1a374 !important;
+  background-color: #21a133 !important;
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #21a133 !important;
-  border-color: #21a133 !important;
+  background-color: #192ac9 !important;
+  border-color: #192ac9 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -118,14 +118,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #14621f !important;
-  border-color: #14621f !important;
+  background-color: #111c85 !important;
+  border-color: #111c85 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #14621f !important;
-  border-color: #14621f !important;
+  background-color: #111c85 !important;
+  border-color: #111c85 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -209,8 +209,8 @@ body {
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #21a133 !important;
+  border-color: #21a133 !important;
   color: #ffffff !important;
 }
 .btn-danger:hover,
@@ -218,14 +218,14 @@ body {
 .btn-danger.focus,
 .btn-danger.active {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #14621f !important;
+  border-color: #14621f !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #14621f !important;
+  border-color: #14621f !important;
 }
 .btn-white {
   color: #333333 !important;
@@ -273,22 +273,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #104c18;
-  color: #104c18;
+  border-color: #0e176e;
+  color: #0e176e;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #21a133;
-  border-color: #21a133;
+  background-color: #192ac9;
+  border-color: #192ac9;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #21a133 !important;
-  border-color: #21a133 !important;
+  background-color: #192ac9 !important;
+  border-color: #192ac9 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -373,22 +373,22 @@ body {
 .btn-danger-outline,
 .btn-danger-outline:active {
   background: none;
-  border-color: #7a6e45;
-  color: #7a6e45;
+  border-color: #104c18;
+  color: #104c18;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #b1a374;
-  border-color: #b1a374;
+  background-color: #21a133;
+  border-color: #21a133;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #21a133 !important;
+  border-color: #21a133 !important;
 }
 .btn-black-outline,
 .btn-black-outline:active {
@@ -425,7 +425,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #21a133 !important;
+  color: #192ac9 !important;
 }
 .text-secondary {
   color: #f21111 !important;
@@ -440,7 +440,7 @@ body {
   color: #879a9f !important;
 }
 .text-danger {
-  color: #b1a374 !important;
+  color: #21a133 !important;
 }
 .text-white {
   color: #ffffff !important;
@@ -450,7 +450,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #104c18 !important;
+  color: #0e176e !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -470,7 +470,7 @@ a.text-warning:focus {
 }
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #7a6e45 !important;
+  color: #104c18 !important;
 }
 a.text-white:hover,
 a.text-white:focus {
@@ -490,7 +490,7 @@ a.text-black:focus {
   background-color: #879a9f;
 }
 .alert-danger {
-  background-color: #b1a374;
+  background-color: #21a133;
 }
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 100px;
@@ -508,8 +508,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #21a133;
-  border-color: #21a133;
+  background-color: #192ac9;
+  border-color: #192ac9;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -520,11 +520,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #21a133;
+  color: #192ac9;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #63df74;
+  color: #b8bef6;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -540,7 +540,7 @@ a:hover {
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #dfd9c6;
+  color: #63df74;
 }
 /* Scroll to top button*/
 #scrollToTop a {
@@ -555,7 +555,7 @@ a:hover {
   font-size: 1.6rem;
 }
 blockquote {
-  border-color: #21a133;
+  border-color: #192ac9;
 }
 /* Forms */
 .mbr-form .btn {
@@ -611,11 +611,11 @@ blockquote {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #21a133;
+  background: #192ac9;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #21a133;
+  color: #192ac9;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -657,7 +657,7 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #21a133;
+  background-color: #192ac9;
   color: #ffffff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
@@ -670,14 +670,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #21a133;
-  border-bottom-color: #21a133;
+  border-top-color: #192ac9;
+  border-bottom-color: #192ac9;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #ffffff !important;
-  background-color: #21a133 !important;
+  background-color: #192ac9 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -706,7 +706,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%2321a133' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23192ac9' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.3;
@@ -881,7 +881,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #15f134;
 }
 .cid-s6R4IT4ztQ button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1381,16 +1381,57 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s6RCT2z5O5 {
-  background: #232323;
+  background: #efefef;
   padding-top: 60px;
   padding-bottom: 60px;
-  background: linear-gradient(0deg, #232323, #ffffff);
+  background: linear-gradient(0deg, #efefef, #ffffff);
 }
 .cid-s6RCT2z5O5 .video-block {
   margin: auto;
 }
 @media (max-width: 768px) {
   .cid-s6RCT2z5O5 .video-block {
+    width: 100% !important;
+  }
+}
+.cid-s7t6sPli96 {
+  background-image: url("../../../assets/images/ganhe-3000-1000x1000.jpeg");
+}
+.cid-s7t6sPli96 h1 {
+  color: #616161;
+}
+.cid-s7t6sPli96 h2,
+.cid-s7t6sPli96 h3,
+.cid-s7t6sPli96 p {
+  color: #767676;
+}
+.cid-s7t6sPli96 .mbr-section-subtitle {
+  font-style: italic;
+}
+.cid-s7t6sPli96 H3 {
+  text-align: center;
+  color: #efefef;
+}
+.cid-s7t6sPli96 H1 {
+  text-align: center;
+  color: #efefef;
+}
+.cid-s7t6sPli96 .mbr-text,
+.cid-s7t6sPli96 .mbr-section-btn {
+  color: #efefef;
+  text-align: center;
+}
+.cid-s7t6oaFjwR {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, #ffffff, #ffffff);
+}
+.cid-s7t6oaFjwR .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-s7t6oaFjwR .video-block {
     width: 100% !important;
   }
 }
@@ -1712,7 +1753,7 @@ section.lazy-placeholder:after {
 .cid-s6ZBvcKD8J {
   padding-top: 120px;
   padding-bottom: 120px;
-  background: linear-gradient(45deg, #232323, #151c69);
+  background: linear-gradient(45deg, #232323, #21a133);
 }
 .cid-s6ZBvcKD8J H1 {
   color: #c1c1c1;
@@ -1799,7 +1840,7 @@ section.lazy-placeholder:after {
 }
 .cid-s5MZeJdbAM {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-s5MZeJdbAM .mbr-section-subtitle {
@@ -1883,9 +1924,9 @@ section.lazy-placeholder:after {
   text-align: left;
 }
 .cid-s63ZwgknrM {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #45505b;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-s63ZwgknrM P {
   color: #767676;
@@ -2003,12 +2044,12 @@ section.lazy-placeholder:after {
 .cid-s6ZByUci2V {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #55b4d4, #073b4c);
+  background: linear-gradient(45deg, #192ac9, #232323);
 }
 .cid-s5RnDNC0GZ {
   background: #ffffff;
   padding-top: 75px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-s5RnDNC0GZ .video-block {
@@ -2022,7 +2063,7 @@ section.lazy-placeholder:after {
 .cid-s63ZJJOE9o {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #073b4c;
+  background-color: #ffffff;
 }
 .cid-s63ZJJOE9o P {
   color: #767676;
